--- a/_modules/strscan.html
+++ b/_modules/strscan.html
@@ -6,14 +6,14 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>strscan &mdash; Scanner v0.0.2
+    <title>strscan &mdash; Scanner v0.0.4
  documentation</title>
     <link rel="stylesheet" href="../_static/flasky.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.0.2
+        VERSION:     '0.0.4
 ',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="../_static/jquery.js"></script>
     <script type="text/javascript" src="../_static/underscore.js"></script>
     <script type="text/javascript" src="../_static/doctools.js"></script>
-    <link rel="top" title="Scanner v0.0.2
+    <link rel="top" title="Scanner v0.0.4
  documentation" href="../index.html" />
     <link rel="up" title="Module code" href="index.html" />
    
@@ -41,7 +41,7 @@
         <li class="right" >
           <a href="../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../index.html">Scanner v0.0.2
+        <li><a href="../index.html">Scanner v0.0.4
  documentation</a> &raquo;</li>
           <li><a href="index.html" accesskey="U">Module code</a> &raquo;</li> 
       </ul>
@@ -64,6 +64,7 @@
 
 <span class="sd">    The aim is to provide for lexical scanning operations on strings::</span>
 
+<span class="sd">        &gt;&gt;&gt; from strscan import Scanner</span>
 <span class="sd">        &gt;&gt;&gt; s = Scanner(&quot;This is an example string&quot;)</span>
 <span class="sd">        &gt;&gt;&gt; s.eos()</span>
 <span class="sd">        False</span>
@@ -131,6 +132,35 @@
     <span class="n">prev</span> <span class="o">=</span> <span class="nb">property</span><span class="p">(</span><span class="k">lambda</span> <span class="bp">self</span><span class="p">:</span> <span class="bp">self</span><span class="o">.</span><span class="n">pos_history</span><span class="p">[</span><span class="o">-</span><span class="mi">2</span><span class="p">],</span>
             <span class="n">doc</span><span class="o">=</span><span class="s">&quot;The last position of the scan pointer.&quot;</span><span class="p">)</span>
 
+<div class="viewcode-block" id="Scanner.coords"><a class="viewcode-back" href="../index.html#strscan.Scanner.coords">[docs]</a>    <span class="k">def</span> <span class="nf">coords</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+        <span class="s">r&quot;&quot;&quot;</span>
+<span class="s">        Return the current scanner position as `(lineno, columnno, line)`.</span>
+
+<span class="s">        This method is useful for displaying the scanner position in a human-</span>
+<span class="s">        readable way. For example, you could use it to provide friendlier</span>
+<span class="s">        debugging information when writing parsers.</span>
+
+<span class="s">            &gt;&gt;&gt; s = Scanner(&quot;abcdef\nghijkl\nmnopqr\nstuvwx\nyz&quot;)</span>
+<span class="s">            &gt;&gt;&gt; s.coords()</span>
+<span class="s">            (0, 0, &#39;abcdef&#39;)</span>
+<span class="s">            &gt;&gt;&gt; s.pos += 4</span>
+<span class="s">            &gt;&gt;&gt; s.coords()</span>
+<span class="s">            (0, 4, &#39;abcdef&#39;)</span>
+<span class="s">            &gt;&gt;&gt; s.pos += 2</span>
+<span class="s">            &gt;&gt;&gt; s.coords()</span>
+<span class="s">            (0, 6, &#39;abcdef&#39;)</span>
+<span class="s">            &gt;&gt;&gt; s.pos += 1</span>
+<span class="s">            &gt;&gt;&gt; s.coords()</span>
+<span class="s">            (1, 0, &#39;ghijkl&#39;)</span>
+<span class="s">            &gt;&gt;&gt; s.pos += 4</span>
+<span class="s">            &gt;&gt;&gt; s.coords()</span>
+<span class="s">            (1, 4, &#39;ghijkl&#39;)</span>
+<span class="s">            &gt;&gt;&gt; s.pos += 4</span>
+<span class="s">            &gt;&gt;&gt; s.coords()</span>
+<span class="s">            (2, 1, &#39;mnopqr&#39;)</span>
+<span class="s">        &quot;&quot;&quot;</span>
+        <span class="k">return</span> <span class="n">text_coords</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">string</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">pos</span><span class="p">)</span>
+</div>
     <span class="k">def</span> <span class="nf">_get_match</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">_match</span>
     <span class="k">def</span> <span class="nf">_set_match</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">match</span><span class="p">):</span>
@@ -140,24 +170,24 @@
             <span class="n">doc</span><span class="o">=</span><span class="s">&quot;The latest scan match.&quot;</span><span class="p">)</span>
 
 <div class="viewcode-block" id="Scanner.beginning_of_line"><a class="viewcode-back" href="../index.html#strscan.Scanner.beginning_of_line">[docs]</a>    <span class="k">def</span> <span class="nf">beginning_of_line</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">        Return true if the scan pointer is at the beginning of a line.</span>
+        <span class="s">r&quot;&quot;&quot;</span>
+<span class="s">        Return true if the scan pointer is at the beginning of a line.</span>
 
-<span class="sd">            &gt;&gt;&gt; s = Scanner(&quot;test\\ntest\\n&quot;)</span>
-<span class="sd">            &gt;&gt;&gt; s.beginning_of_line()</span>
-<span class="sd">            True</span>
-<span class="sd">            &gt;&gt;&gt; s.skip(r&#39;te&#39;)</span>
-<span class="sd">            2</span>
-<span class="sd">            &gt;&gt;&gt; s.beginning_of_line()</span>
-<span class="sd">            False</span>
-<span class="sd">            &gt;&gt;&gt; s.skip(r&#39;st\\n&#39;)</span>
-<span class="sd">            3</span>
-<span class="sd">            &gt;&gt;&gt; s.beginning_of_line()</span>
-<span class="sd">            True</span>
-<span class="sd">            &gt;&gt;&gt; s.terminate()</span>
-<span class="sd">            &gt;&gt;&gt; s.beginning_of_line()</span>
-<span class="sd">            True</span>
-<span class="sd">        &quot;&quot;&quot;</span>
+<span class="s">            &gt;&gt;&gt; s = Scanner(&quot;test\ntest\n&quot;)</span>
+<span class="s">            &gt;&gt;&gt; s.beginning_of_line()</span>
+<span class="s">            True</span>
+<span class="s">            &gt;&gt;&gt; s.skip(r&#39;te&#39;)</span>
+<span class="s">            2</span>
+<span class="s">            &gt;&gt;&gt; s.beginning_of_line()</span>
+<span class="s">            False</span>
+<span class="s">            &gt;&gt;&gt; s.skip(r&#39;st\n&#39;)</span>
+<span class="s">            3</span>
+<span class="s">            &gt;&gt;&gt; s.beginning_of_line()</span>
+<span class="s">            True</span>
+<span class="s">            &gt;&gt;&gt; s.terminate()</span>
+<span class="s">            &gt;&gt;&gt; s.beginning_of_line()</span>
+<span class="s">            True</span>
+<span class="s">        &quot;&quot;&quot;</span>
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">pos</span> <span class="o">&gt;</span> <span class="nb">len</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">string</span><span class="p">):</span>
             <span class="k">return</span> <span class="bp">None</span>
         <span class="k">elif</span> <span class="bp">self</span><span class="o">.</span><span class="n">pos</span> <span class="o">==</span> <span class="mi">0</span><span class="p">:</span>
@@ -240,31 +270,31 @@
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">match</span><span class="o">.</span><span class="n">group</span><span class="p">(</span><span class="mi">0</span><span class="p">)</span>
 </div>
 <div class="viewcode-block" id="Scanner.pre_match"><a class="viewcode-back" href="../index.html#strscan.Scanner.pre_match">[docs]</a>    <span class="k">def</span> <span class="nf">pre_match</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">        Get whatever comes before the current match.</span>
+        <span class="s">r&quot;&quot;&quot;</span>
+<span class="s">        Get whatever comes before the current match.</span>
 
-<span class="sd">            &gt;&gt;&gt; s = Scanner(&#39;test string&#39;)</span>
-<span class="sd">            &gt;&gt;&gt; s.skip(r&#39;test&#39;)</span>
-<span class="sd">            4</span>
-<span class="sd">            &gt;&gt;&gt; s.scan(r&#39;\\s&#39;)</span>
-<span class="sd">            &#39; &#39;</span>
-<span class="sd">            &gt;&gt;&gt; s.pre_match()</span>
-<span class="sd">            &#39;test&#39;</span>
-<span class="sd">        &quot;&quot;&quot;</span>
+<span class="s">            &gt;&gt;&gt; s = Scanner(&#39;test string&#39;)</span>
+<span class="s">            &gt;&gt;&gt; s.skip(r&#39;test&#39;)</span>
+<span class="s">            4</span>
+<span class="s">            &gt;&gt;&gt; s.scan(r&#39;\s&#39;)</span>
+<span class="s">            &#39; &#39;</span>
+<span class="s">            &gt;&gt;&gt; s.pre_match()</span>
+<span class="s">            &#39;test&#39;</span>
+<span class="s">        &quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">string</span><span class="p">[:</span><span class="bp">self</span><span class="o">.</span><span class="n">match</span><span class="o">.</span><span class="n">start</span><span class="p">()]</span>
 </div>
 <div class="viewcode-block" id="Scanner.post_match"><a class="viewcode-back" href="../index.html#strscan.Scanner.post_match">[docs]</a>    <span class="k">def</span> <span class="nf">post_match</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">        Get whatever comes after the current match.</span>
+        <span class="s">r&quot;&quot;&quot;</span>
+<span class="s">        Get whatever comes after the current match.</span>
 
-<span class="sd">            &gt;&gt;&gt; s = Scanner(&#39;test string&#39;)</span>
-<span class="sd">            &gt;&gt;&gt; s.skip(r&#39;test&#39;)</span>
-<span class="sd">            4</span>
-<span class="sd">            &gt;&gt;&gt; s.scan(r&#39;\\s&#39;)</span>
-<span class="sd">            &#39; &#39;</span>
-<span class="sd">            &gt;&gt;&gt; s.post_match()</span>
-<span class="sd">            &#39;string&#39;</span>
-<span class="sd">        &quot;&quot;&quot;</span>
+<span class="s">            &gt;&gt;&gt; s = Scanner(&#39;test string&#39;)</span>
+<span class="s">            &gt;&gt;&gt; s.skip(r&#39;test&#39;)</span>
+<span class="s">            4</span>
+<span class="s">            &gt;&gt;&gt; s.scan(r&#39;\s&#39;)</span>
+<span class="s">            &#39; &#39;</span>
+<span class="s">            &gt;&gt;&gt; s.post_match()</span>
+<span class="s">            &#39;string&#39;</span>
+<span class="s">        &quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">string</span><span class="p">[</span><span class="bp">self</span><span class="o">.</span><span class="n">match</span><span class="o">.</span><span class="n">end</span><span class="p">():]</span>
 </div>
 <div class="viewcode-block" id="Scanner.unscan"><a class="viewcode-back" href="../index.html#strscan.Scanner.unscan">[docs]</a>    <span class="k">def</span> <span class="nf">unscan</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
@@ -478,6 +508,36 @@
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">search_full</span><span class="p">(</span><span class="n">regex</span><span class="p">,</span> <span class="n">return_string</span><span class="o">=</span><span class="bp">False</span><span class="p">,</span> <span class="n">advance_pointer</span><span class="o">=</span><span class="bp">False</span><span class="p">)</span>
 
 </div></div>
+<div class="viewcode-block" id="text_coords"><a class="viewcode-back" href="../index.html#strscan.text_coords">[docs]</a><span class="k">def</span> <span class="nf">text_coords</span><span class="p">(</span><span class="n">string</span><span class="p">,</span> <span class="n">position</span><span class="p">):</span>
+    <span class="s">r&quot;&quot;&quot;</span>
+<span class="s">    Transform a simple index into a human-readable position in a string.</span>
+
+<span class="s">    This function accepts a string and an index, and will return a triple of</span>
+<span class="s">    `(lineno, columnno, line)` representing the position through the text. It&#39;s</span>
+<span class="s">    useful for displaying a string index in a human-readable way::</span>
+
+<span class="s">        &gt;&gt;&gt; s = &quot;abcdef\nghijkl\nmnopqr\nstuvwx\nyz&quot;</span>
+<span class="s">        &gt;&gt;&gt; text_coords(s, 0)</span>
+<span class="s">        (0, 0, &#39;abcdef&#39;)</span>
+<span class="s">        &gt;&gt;&gt; text_coords(s, 4)</span>
+<span class="s">        (0, 4, &#39;abcdef&#39;)</span>
+<span class="s">        &gt;&gt;&gt; text_coords(s, 6)</span>
+<span class="s">        (0, 6, &#39;abcdef&#39;)</span>
+<span class="s">        &gt;&gt;&gt; text_coords(s, 7)</span>
+<span class="s">        (1, 0, &#39;ghijkl&#39;)</span>
+<span class="s">        &gt;&gt;&gt; text_coords(s, 11)</span>
+<span class="s">        (1, 4, &#39;ghijkl&#39;)</span>
+<span class="s">        &gt;&gt;&gt; text_coords(s, 15)</span>
+<span class="s">        (2, 1, &#39;mnopqr&#39;)</span>
+<span class="s">    &quot;&quot;&quot;</span>
+    <span class="n">line_start</span> <span class="o">=</span> <span class="n">string</span><span class="o">.</span><span class="n">rfind</span><span class="p">(</span><span class="s">&#39;</span><span class="se">\n</span><span class="s">&#39;</span><span class="p">,</span> <span class="mi">0</span><span class="p">,</span> <span class="n">position</span><span class="p">)</span> <span class="o">+</span> <span class="mi">1</span>
+    <span class="n">line_end</span> <span class="o">=</span> <span class="n">string</span><span class="o">.</span><span class="n">find</span><span class="p">(</span><span class="s">&#39;</span><span class="se">\n</span><span class="s">&#39;</span><span class="p">,</span> <span class="n">position</span><span class="p">)</span>
+    <span class="n">lineno</span> <span class="o">=</span> <span class="n">string</span><span class="o">.</span><span class="n">count</span><span class="p">(</span><span class="s">&#39;</span><span class="se">\n</span><span class="s">&#39;</span><span class="p">,</span> <span class="mi">0</span><span class="p">,</span> <span class="n">position</span><span class="p">)</span>
+    <span class="n">columnno</span> <span class="o">=</span> <span class="n">position</span> <span class="o">-</span> <span class="n">line_start</span>
+    <span class="n">line</span> <span class="o">=</span> <span class="n">string</span><span class="p">[</span><span class="n">line_start</span><span class="p">:</span><span class="n">line_end</span><span class="p">]</span>
+    <span class="k">return</span> <span class="p">(</span><span class="n">lineno</span><span class="p">,</span> <span class="n">columnno</span><span class="p">,</span> <span class="n">line</span><span class="p">)</span>
+
+</div>
 <div class="viewcode-block" id="get_regex"><a class="viewcode-back" href="../index.html#strscan.get_regex">[docs]</a><span class="k">def</span> <span class="nf">get_regex</span><span class="p">(</span><span class="n">regex</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Ensure we have a compiled regular expression object.</span>
@@ -497,7 +557,13 @@
         <span class="k">return</span> <span class="n">re</span><span class="o">.</span><span class="n">compile</span><span class="p">(</span><span class="n">regex</span><span class="p">)</span>
     <span class="k">elif</span> <span class="ow">not</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">regex</span><span class="p">,</span> <span class="n">re</span><span class="o">.</span><span class="n">_pattern_type</span><span class="p">):</span>
         <span class="k">raise</span> <span class="ne">TypeError</span><span class="p">(</span><span class="s">&quot;Invalid regex type: </span><span class="si">%r</span><span class="s">&quot;</span> <span class="o">%</span> <span class="p">(</span><span class="n">regex</span><span class="p">,))</span>
-    <span class="k">return</span> <span class="n">regex</span></div>
+    <span class="k">return</span> <span class="n">regex</span>
+
+</div>
+<span class="k">def</span> <span class="nf">_get_tests</span><span class="p">():</span>
+    <span class="sd">&quot;&quot;&quot;Enables ``python setup.py test``.&quot;&quot;&quot;</span>
+    <span class="kn">import</span> <span class="nn">doctest</span>
+    <span class="k">return</span> <span class="n">doctest</span><span class="o">.</span><span class="n">DocTestSuite</span><span class="p">()</span>
 </pre></div>
 
           </div>
