--- a/genindex.html
+++ b/genindex.html
@@ -6,14 +6,14 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Index &mdash; Scanner v0.0.2
+    <title>Index &mdash; Scanner v0.0.4
  documentation</title>
     <link rel="stylesheet" href="_static/flasky.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '',
-        VERSION:     '0.0.2
+        VERSION:     '0.0.4
 ',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="top" title="Scanner v0.0.2
+    <link rel="top" title="Scanner v0.0.4
  documentation" href="index.html" />
    
   
@@ -40,7 +40,7 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="index.html">Scanner v0.0.2
+        <li><a href="index.html">Scanner v0.0.4
  documentation</a> &raquo;</li> 
       </ul>
     </div>  
@@ -67,9 +67,10 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%" valign="top"><dl>
     <dt><a href="index.html#strscan.Scanner.check">check() (strscan.Scanner method)</a></dt>
+    <dt><a href="index.html#strscan.Scanner.check_until">check_until() (strscan.Scanner method)</a></dt>
 </dl></td>
   <td style="width: 33%" valign="top"><dl>
-    <dt><a href="index.html#strscan.Scanner.check_until">check_until() (strscan.Scanner method)</a></dt>
+    <dt><a href="index.html#strscan.Scanner.coords">coords() (strscan.Scanner method)</a></dt>
 </dl></td>
 </tr></table>
 
@@ -85,9 +86,6 @@
 
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%" valign="top"><dl>
-    <dt><a href="index.html#strscan.get_regex">get_regex() (in module strscan)</a></dt>
-</dl></td>
   <td style="width: 33%" valign="top"><dl>
     <dt><a href="index.html#strscan.Scanner.getch">getch() (strscan.Scanner method)</a></dt>
 </dl></td>
@@ -144,6 +142,9 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%" valign="top"><dl>
     <dt><a href="index.html#strscan.Scanner.terminate">terminate() (strscan.Scanner method)</a></dt>
+</dl></td>
+  <td style="width: 33%" valign="top"><dl>
+    <dt><a href="index.html#strscan.text_coords">text_coords() (in module strscan)</a></dt>
 </dl></td>
 </tr></table>
 
