Updated the Sphinx build again.

--- a/_modules/strscan.html
+++ b/_modules/strscan.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>strscan &mdash; Scanner v0.0.4
+    <title>strscan &mdash; strscan v0.0.4
  documentation</title>
     <link rel="stylesheet" href="../_static/flasky.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="../_static/jquery.js"></script>
     <script type="text/javascript" src="../_static/underscore.js"></script>
     <script type="text/javascript" src="../_static/doctools.js"></script>
-    <link rel="top" title="Scanner v0.0.4
+    <link rel="top" title="strscan v0.0.4
  documentation" href="../index.html" />
     <link rel="up" title="Module code" href="index.html" />
    
@@ -41,7 +41,7 @@
         <li class="right" >
           <a href="../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../index.html">Scanner v0.0.4
+        <li><a href="../index.html">strscan v0.0.4
  documentation</a> &raquo;</li>
           <li><a href="index.html" accesskey="U">Module code</a> &raquo;</li> 
       </ul>
